// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiHue accepts a color 1`] = `
<div
  aria-label="aria-label"
  class="euiSaturation testClass1 testClass2"
  data-test-subj="test subject string"
  style="background:hsl(180, 100%, 50%)"
  tabindex="-1"
>
  <div
    class="euiSaturation__lightness"
  >
    <div
      class="euiSaturation__saturation"
    />
  </div>
  <button
    aria-describedby="undefined-instructions"
    aria-roledescription="HSV color mode saturation and value 2-axis slider"
    class="euiSaturation__indicator"
    id="undefined-saturationIndicator"
    style="left:0;top:0"
  />
  <span
    aria-live="assertive"
    hidden=""
  />
  <span
    hidden=""
    id="undefined-instructions"
  >
    Arrow keys to navigate the square color gradient. Coordinates will be used to calculate HSV color mode 'saturation' and 'value' numbers, in the range of 0 to 1. Left and right to change the saturation. Up and down change the value.
  </span>
</div>
`;

exports[`EuiHue is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiSaturation testClass1 testClass2"
  data-test-subj="test subject string"
  style="background:hsl(1, 100%, 50%)"
  tabindex="-1"
>
  <div
    class="euiSaturation__lightness"
  >
    <div
      class="euiSaturation__saturation"
    />
  </div>
  <button
    aria-describedby="undefined-instructions"
    aria-roledescription="HSV color mode saturation and value 2-axis slider"
    class="euiSaturation__indicator"
    id="undefined-saturationIndicator"
    style="left:0;top:0"
  />
  <span
    aria-live="assertive"
    hidden=""
  />
  <span
    hidden=""
    id="undefined-instructions"
  >
    Arrow keys to navigate the square color gradient. Coordinates will be used to calculate HSV color mode 'saturation' and 'value' numbers, in the range of 0 to 1. Left and right to change the saturation. Up and down change the value.
  </span>
</div>
`;
